--- a/css/media.css
+++ b/css/media.css
@@ -1,7 +1,4 @@
 @media (max-width:1200px){
-	section{
-		padding: 0 20px;
-	}
 	.nlo{
 		padding: 0;
 	}
@@ -17,25 +14,42 @@
 	.register__panel{
 		margin-left: 30px;
 	}
-	.f__logo{
-		margin-left: 20px;
-	}
 	.footer__menu{
 		margin-right: 20px;
 	}
 	.slider3 .slick-dots{
 		left: 26%;
-		transform: translateX(-50%);
+		-webkit-transform: translateX(-50%);
+		    -ms-transform: translateX(-50%);
+		        transform: translateX(-50%);
 	}
 	.slider22__item{
 		margin: 30px 9% 20px;
+	}
+	.slider__img img{
+		width: 100%;
+	}
+	.item{
+		max-width: 540px;
+		margin-left: 20px;
+	}
+	.slider .item{
+		margin: 15px;
+	}
+	.info{
+		margin-left: 20px;
+	}
+	.h2__start{
+		padding-left: 15px;
 	}
 }
 
 @media (max-width:1070px){
 	.slider3 .slick-dots{
 		left: 28%;
-		transform: translateX(-50%);
+		-webkit-transform: translateX(-50%);
+		    -ms-transform: translateX(-50%);
+		        transform: translateX(-50%);
 	}
 }
 
@@ -45,7 +59,9 @@
 	}
 	.slider3 .slick-dots{
 		left: 30%;
-		transform: translateX(-50%);
+		-webkit-transform: translateX(-50%);
+		    -ms-transform: translateX(-50%);
+		        transform: translateX(-50%);
 	}
 }
 
@@ -71,7 +87,9 @@
 	}
 	.slider3 .slick-dots{
 		left: 50%;
-		transform: translateX(-50%);
+		-webkit-transform: translateX(-50%);
+		    -ms-transform: translateX(-50%);
+		        transform: translateX(-50%);
 	}
 	.about__text{
 		padding: 0px 16px 0 16px;
@@ -88,7 +106,9 @@
 	}
 	.footer__link{
 		margin-left: 15px;
-		align-items: center;
+		-webkit-box-align: center;
+		    -ms-flex-align: center;
+		        align-items: center;
 		text-align: end;
 	}
 	.register__panel{
@@ -101,17 +121,11 @@
 	body.lock{
 		overflow: hidden;
 	}
-	.h2__start{
-		margin-left: 15px;
-	}
 	.header::before{
 		z-index: 3;	
 	}
 	.header__body{
 		height: 56px;
-	}
-	.header__logo{
-		padding-left: 18px;
 	}
 	.header__burger{
 		display: block;
@@ -126,13 +140,20 @@
 		display: none;
 	}
 	.header__burger.active span:nth-child(2) {
-		transform: rotate(45deg);
+		-webkit-transform: rotate(45deg);
+		    -ms-transform: rotate(45deg);
+		        transform: rotate(45deg);
 	}
 	.header__burger.active span:nth-child(3) {
-		transform: rotate(-45deg);
+		-webkit-transform: rotate(-45deg);
+		    -ms-transform: rotate(-45deg);
+		        transform: rotate(-45deg);
 	}
 	.header__burger.active span:nth-child(4) {
 		display: none;
+	}
+	.header__menu{
+		display: block;
 	}
 	.header__menu.active{
 		top: 0;
@@ -145,6 +166,8 @@
 		height: 100%;
 		padding: 70px 0 0 0;
 		background-color: #fff;
+		-webkit-transition: all .4s ease 0s;
+		-o-transition: all .4s ease 0s;
 		transition: all .4s ease 0s;
 		overflow: auto;
 	}
@@ -160,14 +183,18 @@
 		line-height: 27px;
 	}
 	.register__panel {
+		display: -webkit-box;
+		display: -ms-flexbox;
 		display: flex;
-		margin-left: 0;
+		margin-left: 17px;
 		padding-top: 40px;
 		padding-bottom: 20px;
 	}
 	.login {
 		margin: 0 30px;
-		order: 2;
+		-webkit-box-ordinal-group: 3;
+		    -ms-flex-order: 2;
+		        order: 2;
 	}
 	.btn__login {
 		font-weight: 600;
@@ -179,7 +206,9 @@
 		background-color: var(--color1);
 		padding: 9px 23px;
 		border-radius: 5px;
-		order: 1;
+		-webkit-box-ordinal-group: 2;
+		    -ms-flex-order: 1;
+		        order: 1;
 	}
 	.btn__register {
 		font-weight: 600;
@@ -234,12 +263,22 @@
 	.login{
 		padding: 9px 32px;
 	}
+	.slider__img img{
+		width: 100%;
+	}
+	.item{
+		max-width: 540px;
+	}
+	.slider__img img{
+		width: 100%;
+	}
+	.item{
+		max-width: 540px;
+	}
+	
 }
 
 @media (max-width:576px){
-	section{
-		padding-left: 6px;
-	}
 	.steps{
 		display: block;
 		text-align: center;
@@ -249,7 +288,9 @@
 		margin: 70px auto 0;
 	}
 	.arrow-works{
-		transform: rotate(90deg);
+		-webkit-transform: rotate(90deg);
+		    -ms-transform: rotate(90deg);
+		        transform: rotate(90deg);
 	}
 	.circles{
 		margin: 40px auto 0px;
@@ -279,5 +320,7 @@
 	.item{
 		max-width: 540px;
 	}
+	.arrow-works-none{
+		display: block;
+	}
 }
-
