--- a/css/slider.css
+++ b/css/slider.css
@@ -1,7 +1,11 @@
 /* Слайдер */
 .slick-track{
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: space-between;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
 }
 .slider{
 	position: relative;
@@ -32,9 +36,15 @@
 /* стилизация точек */
 
 .slider .slick-dots{
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	align-items: center;
-	justify-content: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
 }
 .slider .slick-dots li{
 	list-style: none;
