--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@ font-family: 'Rajdhani', sans-serif; */
 	border: 0;
 }
 *,*::before,*::after{
-	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
 	box-sizing:border-box;
 }
@@ -79,10 +78,16 @@ img{vertical-align: top;}
 }
 .header__body {
 	position: relative;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: space-between;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
 	height: 96px;
-	align-items: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 }
 .header__logo {
 	color: var(--color3);
@@ -112,6 +117,8 @@ img{vertical-align: top;}
 	height: 3px;
 	border-radius: 50px;
 	background-color: #fff;
+	-webkit-transition: all .3s ease 0s;
+	-o-transition: all .3s ease 0s;
 	transition: all .3s ease 0s;
 }
 .line1{
@@ -128,10 +135,19 @@ img{vertical-align: top;}
 	right: 4px;
 }
 .header__list {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	align-items: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 	position: relative;
 	z-index: 2;
+}
+.header__menu{
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
 }
 .header__list li{
 	margin: 0px 0px 0px 30px;
@@ -148,9 +164,15 @@ img{vertical-align: top;}
 	opacity: .5;
 }
 .register__panel {
+	z-index: 3;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	align-items: center;
-	align-content: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+	-ms-flex-line-pack: center;
+	    align-content: center;
 	margin-left: 50px;
 }
 .btn {
@@ -162,6 +184,8 @@ img{vertical-align: top;}
 	font-size: 16px;
 	color: white;
 	line-height: 22px;
+	-webkit-transition: all .3s ease;
+	-o-transition: all .3s ease;
 	transition: all .3s ease;
 }
 .btn:hover{
@@ -189,9 +213,15 @@ img{vertical-align: top;}
 	padding-top: 96px;
 }
 .title__wrap{
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: space-between;
-	align-items: center;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 }
 .info__title h1{
 	font-family: 'Rajdhani', sans-serif;
@@ -248,11 +278,15 @@ h3{
 .items{
 	margin-top: 40px;
 	/* display: flex; */
-	justify-content: space-between;
-	flex-wrap: wrap;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
+	-ms-flex-wrap: wrap;
+	    flex-wrap: wrap;
 }
 .item {
-	box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.15);
+	-webkit-box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.15);
+	        box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.15);
 	border-radius: 10px;
 	max-width: 270px;
 	position: relative;
@@ -278,8 +312,9 @@ h3{
 	font-weight: 500;
 	font-size: 20px;
 	line-height: 26px;
-	text-decoration-line: line-through;
-	color: var(--color5);
+	-webkit-text-decoration-line: line-through;
+	        text-decoration-line: line-through;
+	color: rgb(96, 93, 93);
 	padding: 0 0 0 7px;
 }
 .item__info {
@@ -325,12 +360,16 @@ h3{
 .arrow__small::before{
 	top: 3px;
 	left: 8.5px;
-	transform: rotate(-40deg);
+	-webkit-transform: rotate(-40deg);
+	    -ms-transform: rotate(-40deg);
+	        transform: rotate(-40deg);
  }
  .arrow__small::after{
 	bottom: 3px;
 	left: 8.5px;
-	transform: rotate(40deg);
+	-webkit-transform: rotate(40deg);
+	    -ms-transform: rotate(40deg);
+	        transform: rotate(40deg);
  }
 
 
@@ -348,10 +387,15 @@ h3{
 	text-align: center;
 }
 .steps {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-wrap: wrap;
+	-ms-flex-wrap: wrap;
+	    flex-wrap: wrap;
 	margin-top: 60px;
-	justify-content: space-between;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
 }
 .step__item {
 	text-align: center;
@@ -380,12 +424,16 @@ h3{
  .arrow-works::before{
 	top: 5px;
 	left: 18px;
-	transform: rotate(-45deg);
+	-webkit-transform: rotate(-45deg);
+	    -ms-transform: rotate(-45deg);
+	        transform: rotate(-45deg);
  }
  .arrow-works::after{
 	bottom: 5px;
 	left: 18px;
-	transform: rotate(45deg);
+	-webkit-transform: rotate(45deg);
+	    -ms-transform: rotate(45deg);
+	        transform: rotate(45deg);
  }
  /* arrow stop */
 .step__text {
@@ -417,8 +465,13 @@ h3{
 	overflow: hidden;
 }
 .flex__slider{
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	align-items: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+	justify-content: space-between;
 }
 .slider22__item{
 	max-width: 400px;
@@ -427,8 +480,12 @@ h3{
 }
 .slider3 .slick-dots{
 	position: absolute;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: center;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
 	bottom: 5%;
 	left: 22%;
 }
@@ -500,14 +557,23 @@ h3{
 	color:white;
 }
 .footer__body{
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: space-between;
-	align-items: center;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 	padding-top: 25px;
 }
 .footer__list{
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-wrap:wrap;
+	-ms-flex-wrap:wrap;
+	    flex-wrap:wrap;
 }
 .footer__list li{
 	margin: 0px 0px 0px 30px;
